# 2021_08Sample

./: CMakeLists.txt  README.md  package.xml
launch/: opencv_ros_sample.launch
scripts/: binarization_process.py  grayscale_conversion.py
